kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-agent
  labels:
    app: test-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-agent
  template:
    metadata:
      labels:
        app: test-agent
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: test-agent
          image: leonhrt/dev-images-hub:agent-test-k3s
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "400Mi"
            requests:
              cpu: "100m"
              memory: "200Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
