kubernetes/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-agent
  labels:
    app: test-agent
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: test-agent
