kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-agent
  labels:
    app: test-agent
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: test-agent
